--- a/examples/entry.html
+++ b/examples/entry.html
@@ -5,6 +5,9 @@
     <title>Title</title>
 </head>
 <body>
-<p>Served by rstool.exe with --entry entry.html</p>
+<p>This is the entry file (entry.html) specified by the parameter</p>
+<p>You can see this page by specifying the entry parameter as <code>entry.html</code> to start the service</p>
+<a href="/index.html">Routes to default entry files</a>
+<a href="/resource.txt">Routes to resource files</a>
 </body>
 </html>
