--- a/examples/index.html
+++ b/examples/index.html
@@ -5,6 +5,10 @@
     <title>Title</title>
 </head>
 <body>
-<p>Served by rstool.exe</p>
+<p></p>
+<p>This is the default entry file (index.html)</p>
+<p>You can see this page by starting the service completely with default parameters</p>
+<a href="/entry.html">Routes to specified entry files</a>
+<a href="/resource.txt">Routes to resource files</a>
 </body>
 </html>
